Fix app overflowing footer by changing its height.

--- a/styles/index.css
+++ b/styles/index.css
@@ -16,7 +16,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 99.5vh;
+    height: 92vh;
     border: none;
     /* Be below all other (parent) elements. Fixes issues with menu vanishing behind. */
     z-index: -5000;
